[gd_scene load_steps=4 format=3 uid="uid://v8tu5jp5lwfm"]

[ext_resource type="Script" uid="uid://b7qck6c0e2vlq" path="res://UIs/DialogueUI.gd" id="1_c7l8v"]
[ext_resource type="Theme" uid="uid://wu6nkefur5hh" path="res://UIs/new_theme.tres" id="1_ulbo2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkf1p"]
bg_color = Color(0.0911501, 0.00905178, 0.185757, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.804687, 0.827538, 0.53528, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ulbo2")
script = ExtResource("1_c7l8v")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -64.0
offset_right = 197.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lkf1p")

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -85.0
offset_right = 157.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NPCNameLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ContinueButton" type="Button" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ulbo2")
text = "continue"

[node name="TradeButton" type="Button" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "trade"

[node name="MoreOptionsContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "close"
